# voxedge

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  sim_server_loop_timing.py
docs/: usage.md
voxedge/: __init__.py  pyproject.toml
voxedge/artifacts/: __init__.py  download.py  manifest.json  manifest.py
voxedge/audio/: __init__.py  rate.py
voxedge/backends/: __init__.py  _deps.py  base.py  llm_base.py  llm_translator.py  mock.py  nllb_translator.py
voxedge/backends/jetson/: __init__.py  _deploy_paths.py  _util.py  kokoro_trt.py  matcha_trt.py  moss_tts_nano.py  paraformer_trt.py  qwen3_trt.py  sensevoice_trt.py  sparktts_trt.py  trt_edge_llm_asr.py  trt_edge_llm_tts.py  voice_registry.py
voxedge/backends/llm/: __init__.py  openai_compat.py
voxedge/backends/rk/: __init__.py  _util.py  artifacts.py  asr.py  runtime.py  tts.py
voxedge/backends/sherpa/: __init__.py  _util.py  asr.py  tts.py
voxedge/backends/trt/: __init__.py  _util.py  asr.py  ipc.py  tts.py  worker_io.py
voxedge/capabilities/: __init__.py  diarization.py  embedding_extractor.py  punctuation.py  speaker_embedding.py
voxedge/engine/: __init__.py  asr_loop.py  asr_session_manager.py  audio_dispatcher.py  builtin_tools.py  capability_resolver.py  client_events.py  concurrency_capability.py  conversation.py  coordinator.py  llm_turn.py  protocol.py  session_state.py  tool_registry.py  tts_buffer.py  tts_sequencer.py  turn_driver.py
voxedge/tests/: test_artifacts_manifest.py  test_asr_empty_final_fallback.py  test_asr_offline_segment.py  test_asr_segment_cap.py  test_asr_wav_ingest_mel_skip.py  test_asr_worker_exit.py  test_asr_worker_op_serialization.py  test_audio_dispatcher_preroll.py  test_audio_rate.py  test_barge_in_and_template.py  test_base_default_concurrency_cap.py  test_coordinator.py  test_cuda_memory_pool_arena.py  test_dep_checks.py  test_diarization.py  test_engine_inprocess.py  test_engine_tts_parity.py  test_engine_watchdogs.py  test_jetson_deploy_paths.py  test_kokoro_concurrency_cap.py  test_kokoro_synth_segments.py  test_llm_openai_compat.py  test_llm_prefix_warmup.py  test_llm_translator.py  test_matcha_concurrency_cap.py  test_matcha_pad_mel.py  test_moss_tts_nano_downmix.py  test_moss_tts_nano_model_id.py  test_nllb_translator.py  test_paraformer_concurrency_cap.py  test_paraformer_trt_unload.py  test_rk_asr_finalize_unpack.py  test_server_loop_integration.py  test_sparktts_clone_routing.py  test_tool_registry.py  test_trt_edge_llm_tts_concurrency_cap.py  test_trt_edge_llm_tts_voice_enrollment.py  test_trt_edge_llm_tts_worker_behavior.py  test_tts_oneshot_and_product_segment.py  test_tts_rate_pitch_wrapper.py  (+3 more)
voxedge/transport/: __init__.py  base.py
