# voxedge — edge-native real-time voice conversation library
#
# Phase 1a: pure-Python foundation only. The core package MUST stay
# importable on any machine with no CUDA / torch / tensorrt — that is the
# whole point of the open-core split (spec §3.1: "voxedge 永远是纯 Python、
# 可 pip install、不需 CUDA 也能装").
#
# Heavy backend adapters live behind optional extras. They are declared here
# as PLACEHOLDERS with empty dependency lists — the real wheels (TensorRT-Edge
# -LLM prebuilt worker, rknn runtime, etc.) are wired up in a later phase and
# pulled from the engine repo / release artifacts, never from this pure-Python
# source tree.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voxedge"
version = "0.0.1a0"
description = "Pipecat for the edge — edge-native, local-first real-time voice conversation library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Harvest Su" }]

# Core dependencies: pure Python only. numpy is the single hard dep (audio
# sample handling in the backend ABCs / mock backends). DO NOT add torch,
# tensorrt, onnxruntime, or any CUDA-linked wheel to this list — they belong
# behind the optional extras below.
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# ── Optional backend extras (PLACEHOLDERS — deps intentionally empty) ──
# NOTE: the TRT-Edge-LLM unified runtime (trt_edge_llm_*) was consolidated into
# voxedge/backends/jetson/ (2026-05-30) — it is a Jetson backend. Its deps are
# folded into the `jetson` extra below; there is no separate `trt` extra.
#
# Installing `voxedge[rk]` pulls the Rockchip (RK3576/RK3588) RKNN/RKLLM
# adapter — thin Python glue over the rknn runtime + the `rkvoice_stream`
# engine package. The adapter lives in `voxedge/backends/rk/` and imports
# `rkvoice_stream` lazily (inside backend __init__/methods), so the core stays
# installable without this extra. These wheels are aarch64-only (Rockchip NPU
# userspace); they will NOT install on x86_64 / Apple Silicon dev boxes — the
# adapter modules still import there because the runtime import is deferred.
rk = [
    # aarch64 (Rockchip NPU) ONLY — not installable on Mac / x86_64.
    "rknn-toolkit-lite2>=2.0 ; platform_machine == 'aarch64'",
    # `rkvoice_stream` is the RK ASR/TTS engine package; it ships from the
    # engine repo / release artifacts (like the trt worker). Backends import it
    # lazily (inside __init__/methods), so the core stays installable elsewhere.
    "rkvoice-stream>=0.1 ; platform_machine == 'aarch64'",
]
# Installing `voxedge[sherpa]` pulls the sherpa-onnx CPU ASR/TTS adapter
# (Paraformer/Zipformer/SenseVoice + Matcha/Kokoro ONNX). The adapter lives in
# `voxedge/backends/sherpa/` and imports sherpa_onnx lazily, so the core stays
# installable without this extra. `soundfile` is needed for offline transcribe.
sherpa = [
    "sherpa-onnx>=1.10",
    "soundfile>=0.12",
]
# Installing `voxedge[jetson]` pulls the Jetson native TensorRT backend
# adapters in `voxedge/backends/jetson/` (matcha_trt / kokoro_trt / qwen3_trt /
# moss_tts_nano / paraformer_trt). Like the trt extra these drive PREBUILT TRT
# engines / a C++ pybind pipeline / a JSONL subprocess worker — the Python side
# imports tensorrt / cuda / onnxruntime / piper_phonemize / tokenizers /
# qwen3_speech_engine LAZILY (inside methods), so the modules still import on a
# CUDA-less dev box. These wheels are aarch64 (Jetson) only — they will NOT
# install on x86_64 / Apple Silicon, but the adapter modules import there
# because every heavy runtime import is deferred.
#
# Real Python-side deps (numpy is already a core dep):
jetson = [
    # aarch64 (Jetson) ONLY for the CUDA/TensorRT-linked wheels — not
    # installable on Mac / x86_64. tensorrt + cuda-python ship from the Jetson
    # L4T / engine repo, NOT from this pure-Python source tree, so they are
    # documented here but NOT declared as hard pip deps:
    #   tensorrt                 # TRT engine deserialize/execute (matcha/kokoro/paraformer)
    #   cuda-python              # cudart memory pool + streams (matcha/kokoro/paraformer)
    #   qwen3_speech_engine      # C++ pybind11 pipeline (qwen3_trt) — engine-repo artifact
    "onnxruntime>=1.16",   # ORT CPU sessions (matcha encoder, kokoro split/hybrid, paraformer ORT fallback) + trt_edge_llm clone-path embedding
    "soundfile>=0.12",     # WAV decode for paraformer/trt_edge_llm offline transcribe
    "piper-phonemize>=1.1.0 ; platform_machine == 'aarch64'",  # en phonemization (matcha/kokoro); aarch64 wheel
    "tokenizers>=0.15",    # Qwen3 BPE tokenizer (qwen3_trt)
    "webrtcvad>=2.0.10",   # trt_edge_llm long-audio silence splitter (energy RMS fallback if absent)
]
# Installing `voxedge[translator]` pulls the NLLB-200 text translation adapter
# in `voxedge/backends/nllb_translator.py` — a thin Python wrapper over the
# CTranslate2 runtime + SentencePiece tokenizer. The adapter imports both
# LAZILY (inside preload()), so the core stays installable without this extra.
# On Jetson the CUDA-linked CTranslate2 wheel ships from a bare-metal build
# (memory nllb_translator_slim_cuda_jetson), NOT pypi (pypi arm64 is CPU-only);
# `sentencepiece` is the pure tokenizer dep.
translator = [
    "ctranslate2>=4.0",
    "sentencepiece>=0.1.99",
]
# Sentence-boundary splitting upgrade (pure Python, ~100 KB). Optional because
# voxedge ships a regex fallback when pysbd is absent (mirrors app/core/v2v.py).
text = [
    # "pysbd>=0.3.4"
]
# Installing `voxedge[artifacts]` pulls the HuggingFace Hub client used by the
# DEFAULT runtime-artifact downloader (`voxedge.artifacts.resolve_artifact`).
# The manifest schema + SHA-256 verification logic itself is pure stdlib and
# needs NO network dependency — callers can inject their own `download_fn`
# (e.g. a local copy for tests), so this stays an OPTIONAL extra and never
# enters the core dependency list.
artifacts = [
    "huggingface_hub>=0.20",
]

[tool.setuptools]
packages = [
    "voxedge",
    "voxedge.backends",
    "voxedge.backends.sherpa",
    "voxedge.backends.rk",
    "voxedge.backends.jetson",
    "voxedge.transport",
    "voxedge.engine",
    "voxedge.artifacts",
]

[tool.setuptools.package-data]
"voxedge.artifacts" = ["manifest.json"]
